Testes_Referencias/Exemplos_Bison/Bison-Teste-02/exemplo.y
%token NUM

%%

entrada:	exp
	;
exp	:	exp '+' termo 
	|	exp '-' termo
	|	termo 
	;
termo	:	termo '*' fator
	|	fator	
	;
fator	:	'('exp')'
	|	NUM 
	;
